--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,10 +10,10 @@ html, body { height: 100%; margin: 0; padding: 0; font-family: arial; }
 
 #filters {
 	position: absolute;
-	top: 100px;
+	bottom: 100px;
 	right: 100px;
 	width: 200px;
-	height: 500px;
+	height: 180px;
 	padding: 0 30px;
 	background-color: #fff;
 }
